[package]
name = "shi_history"
version = "0.4.0"
edition = "2021"
authors = ["Kyohei Uto <im@kyoheiu.dev>"]
description = "A tiny program to add the time and place to your shell history. This also enables you to copy a command to the clipboard."
readme = "README.md"
repository = "https://git.sr.ht/~kyoheiu/"
license = "MIT"
keywords = ["cli", "shell", "history"]
categories = ["command-line-utilities"]

[[bin]]
name = "shi"
path = "src/main.rs"

[dependencies]
crossterm = "0.26.1"
csv = "1.1.6"
dirs = "5.0.0"
serde = { version = "1.0.145", features = ["derive"] }
sqlite = "0.30.4"
