[package]
name = "shi_history"
version = "0.7.0"
edition = "2021"
authors = ["Kyohei Uto <im@kyoheiu.dev>"]
description = "A tiny program to add the time and place to your shell history. This also enables you to copy a command to the clipboard."
readme = "README.md"
repository = "https://github.com/kyoheiu/shi"
license = "MIT"
keywords = ["cli", "shell", "history"]
categories = ["command-line-utilities"]

[[bin]]
name = "shi"
path = "src/main.rs"

[dependencies]
crossterm = "0.27.0"
csv = "1.3.0"
dirs = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
sqlite = "0.34.0"
